# aqualink-sdk

./: .gitignore  Makefile  README.md  config.json  package-lock.json  package.json
sdk/: .gitlab-ci.yml  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  test_aqualink_sdk.py  tox.ini
sdk/.openapi-generator/: FILES
sdk/aqualink_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
sdk/docs/: AllOfLatestDataSurveyPoint.md  AllOfRegionParent.md  AllOfSiteRegion.md  AllOfSiteStream.md  AllOfSurveyMediaSurveyPoint.md  Collection.md  CollectionDataDto.md  CollectionsApi.md  Coordinates.md  CreateCollectionDto.md  CreateRegionDto.md  CreateRegionDtoPolygon.md  CreateSiteApplicationDto.md  CreateSiteDto.md  CreateSiteSurveyPointDto.md  CreateSurveyDto.md  CreateSurveyMediaDto.md  CreateUserDto.md  DailyData.md  DataUploads.md  DataUploadsApi.md  DataUploadsDeleteDto.md  DeploySpotterDto.md  EditSurveyDto.md  EditSurveyMediaDto.md  ExcludeSpotterDatesDto.md  ExclusionDates.md  GoogleCloudStorageApi.md  HealthCheckApi.md  HistoricalMonthlyMean.md  InlineObject.md  InlineObject1.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2001Metlog.md  InlineResponse2001MetlogWindGustSpeed.md  InlineResponse2001SofarWaveModel.md  InlineResponse2001SofarWaveModelWindGustSpeed.md  InlineResponse2001Sonde.md  InlineResponse2001SondeSondeCablePowerVoltage.md  (+49 more)
sdk/swagger_client/: __init__.py  api_client.py  configuration.py
sdk/test/: test_all_of_latest_data_survey_point.py  test_all_of_region_parent.py  test_collection.py  (+86 more)
(+173 files in other folders)
