[metadata]
name = aqualink-ericboucher
version = 1.0.2
author = Eric @ Ovio.org
author_email = eric@ovio.org
description = A simple Python SDK for the Aqualink API - https://aqualink.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aqualinkorg/aqualink-sdk
project_urls =
    Bug Tracker = https://github.com/aqualinkorg/aqualink-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.4
